--- a/Completed/Hex.html
+++ b/Completed/Hex.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,35 +10,31 @@
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             text-align: center;
             margin: 0;
             padding: 20px;
         }
 
         @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         h1 {
             margin-bottom: 20px;
-            font-size: 24px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+            font-size: 28px; /* Increased font size for emphasis */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Stronger text shadow */
         }
 
         #colorLabel {
-            font-size: 20px;
-            color: white;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+            font-size: 22px; /* Increased font size */
             margin: 20px 0;
+            padding: 10px;
+            border: 2px solid rgba(255, 255, 255, 0.3); /* Added border */
+            border-radius: 8px; /* Rounded corners */
+            backdrop-filter: blur(5px); /* Blurred background effect */
         }
 
         #grid {
@@ -51,16 +48,31 @@
         }
 
         .color-box {
-            width: 100%;
-            height: 30px;
+            width: 100%; /* Fill the grid cell */
+            height: 0; /* Set height to zero for aspect ratio */
+            padding-bottom: 100%; /* Create a square by using padding */
+            position: relative; /* Positioning for inner content */
             cursor: pointer;
-            border: 1px solid #333;
+            border: 1px solid #333; /* Subtle border */
             transition: transform 0.2s, box-shadow 0.2s;
         }
 
         .color-box:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.6); /* Enhanced hover effect */
+        }
+
+        .color-box::after {
+            content: ''; /* Create a pseudo-element */
+            display: block;
+            height: 100%; /* Fill the color box */
+            background-color: inherit; /* Inherit the background color */
+            border-radius: 5px; /* Rounded corners */
+            position: absolute; /* Positioning */
+            top: 0; /* Align to the top */
+            left: 0; /* Align to the left */
+            right: 0; /* Align to the right */
+            bottom: 0; /* Align to the bottom */
         }
 
         #hueSlider {
@@ -80,30 +92,30 @@
         }
 
         input[type="range"] {
-            height: 8px;
+            height: 10px; /* Slightly taller for easier interaction */
             margin: 10px 0;
         }
 
         input[type="range"]::-webkit-slider-thumb {
             -webkit-appearance: none;
             appearance: none;
-            width: 20px;
-            height: 20px;
+            width: 24px; /* Larger thumb for better accessibility */
+            height: 24px;
             border-radius: 50%;
             background: #fff;
             cursor: pointer;
             border: 2px solid #333;
-            transition: background 0.2s;
+            transition: background 0.2s, transform 0.2s;
         }
 
         input[type="range"]::-moz-range-thumb {
-            width: 20px;
-            height: 20px;
+            width: 24px; /* Consistent size for Firefox */
+            height: 24px;
             border-radius: 50%;
             background: #fff;
             cursor: pointer;
             border: 2px solid #333;
-            transition: background 0.2s;
+            transition: background 0.2s, transform 0.2s;
         }
     </style>
 </head>
@@ -115,33 +127,33 @@
     <div id="grid"></div>
 
     <script>
-        const grid = document.getElementById('grid');
-        const hueSlider = document.getElementById('hueSlider');
-        const colorLabel = document.getElementById('colorLabel');
+        const grid = document.getElementById('grid'); // Get the grid element
+        const hueSlider = document.getElementById('hueSlider'); // Get the hue slider
+        const colorLabel = document.getElementById('colorLabel'); // Get the color label
 
         function generateColors(hue) {
-            grid.innerHTML = '';
-            for (let i = 0; i < 400; i++) {
-                const saturation = Math.floor((i % 20) * 5.25);
-                const lightness = Math.floor(Math.floor(i / 20) * 5.25);
-                const color = `hsl(${hue}, ${saturation}%, ${lightness}%)`;
-                const hexColor = hslToHex(hue, saturation, lightness);
-                const rgbColor = hslToRgb(hue, saturation, lightness);
+            grid.innerHTML = ''; // Clear previous colors
+            for (let i = 0; i < 400; i++) { // Loop to create color boxes
+                const saturation = Math.floor((i % 20) * 5.25); // Calculate saturation
+                const lightness = Math.floor(Math.floor(i / 20) * 5.25); // Calculate lightness
+                const color = `hsl(${hue}, ${saturation}%, ${lightness}%)`; // Create HSL color
+                const hexColor = hslToHex(hue, saturation, lightness); // Convert to HEX
+                const rgbColor = hslToRgb(hue, saturation, lightness); // Convert to RGB
                 
-                const colorBox = document.createElement('div');
-                colorBox.className = 'color-box';
-                colorBox.style.backgroundColor = color;
+                const colorBox = document.createElement('div'); // Create a color box
+                colorBox.className = 'color-box'; // Set class
+                colorBox.style.backgroundColor = color; // Set background color
 
-                colorBox.onclick = () => {
-                    navigator.clipboard.writeText(hexColor);
+                colorBox.onclick = () => { // On click, update color info
+                    navigator.clipboard.writeText(hexColor); // Copy HEX to clipboard
                     colorLabel.textContent = `Hex Value: ${hexColor} | RGB: ${rgbColor}`; // Update label with clicked color
                 };
 
-                grid.appendChild(colorBox);
+                grid.appendChild(colorBox); // Add color box to grid
             }
         }
 
-        function hslToHex(h, s, l) {
+        function hslToHex(h, s, l) { // Convert HSL to HEX
             s /= 100;
             l /= 100;
             const a = s * Math.min(l, 1 - l);
@@ -153,7 +165,7 @@
             return `#${((1 << 24) + (r << 16) + (g << 8) + b).toString(16).slice(1).toUpperCase()}`;
         }
 
-        function hslToRgb(h, s, l) {
+        function hslToRgb(h, s, l) { // Convert HSL to RGB
             s /= 100;
             l /= 100;
             const a = s * Math.min(l, 1 - l);
@@ -161,15 +173,14 @@
                 const k = (n + h / 30) % 12;
                 return Math.round(255 * (l - a * Math.max(-1, Math.min(k - 3, 9 - k, 1))));
             };
-            return `${f(0)}, ${f(8)}, ${f(4)}`;
+            return `${f(0)}, ${f(8)}, ${f(4)}`; // Return RGB string
         }
 
-        hueSlider.addEventListener('input', () => {
-            generateColors(hueSlider.value);
+        hueSlider.addEventListener('input', () => { // Listen for input changes on the slider
+            generateColors(hueSlider.value); // Regenerate colors based on the new hue
         });
 
-        // Initialize the grid with the default hue
-        generateColors(0);
+        generateColors(0); // Initialize the grid with the default hue
     </script>
 
 </body>
