--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <a href="Completed/LiquiVoid.html">LiquiVoid</a>
         <a href="Completed/Ripple.html">Ripple</a>
         <a href="Completed/Hex.html">Color Palette</a>
+        <a href="Completed/Fluff.html">Fluff</a>
         <!--
-        <a href="Completed/QR Reader.html">QR Reader</a>
         <a href="Completed/Word of the day.html">Random Meanings</a>  
         <a href="Completed/Quotes.html">Random Quotes</a>   
         <a href="Completed/Html Executor.html">Html v1</a>
