--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Webs-of-Wonders</h1>
+        <h1>ZenVibes</h1>
         <a href="Completed/Ball.html">Ball</a>
         <a href="Completed/LiquiVoid.html">LiquiVoid</a>
         <a href="Completed/Ripple.html">Ripple</a>
